# uakill-rust

./: Cargo.toml  build.rs  uakiller-manifest.rc  uakiller.exe.manifest
src/: main.rs
